# borehole_temperature_models

./: .gitignore  Annotated temperature profile MCMC inversion.ipynb  Binschadler_Crary_D_Temps.txt  Build.py  Distribution of Key Forcings in Antarctic Ice Rises.py  Englacial borehole temperature modelling experiments annotated - wip.ipynb  Englacial borehole temperature modelling experiments annotated.ipynb  LICENSE.txt  Notebook.py  README.md  RMS_likelihood-0.5_Crary_w_iceshelf_narrowed_[ 4.0e+02  5.0e+02  7.0e-02  1.5e-01 -2.5e+01]_varH_Temp_a_G__tgrounding_Crary_inversion_256_walkers_1000_iterations.csv  Test_borehole_temp_model_monte-carlo_dask.ipynb  WIP - Englacial borehole temperature modelling experiments annotated.ipynb  WIP - Initial Sections.ipynb  WIP - Section 5.2.ipynb  pyproject.toml  requirements-package.txt  requirements.txt
.github/workflows/: README.md  callable_publish.yaml  callable_test.yaml  callable_validate.yaml  callable_validate_and_package.yaml  event_on_pr.yaml  event_on_push.yaml  event_periodic.yaml  manual_publish.yaml  manual_validate.yaml  sca_CodeQL.yaml
Antarctic GHF model from Martos et al 2017/: Antarctic_GHF_Martos.xyz  Antarctic_GHF_uncertainty.xyz
Antarctic ice rises inventory from Matsouka et al 2015/: antarctic-icerises-v1.geojson
Antarctic ice rises inventory from Matsouka et al 2015/IceRisesInventory_v1/: icerises_inventory_v1.dbf  icerises_inventory_v1.shp  icerises_inventory_v1.shx  icerises_inventory_v1_attr.qml  icerises_inventory_v1_attributes.txt
Crary Ice RIse borehole measurements from Bindschadler et al 1991/: Bindschadler Crary Ice Rise digitized data.csv  Binschadler_Crary_D_Borehole_Temperatures.csv  Binschadler_Crary_S_Temps.txt
Inversion MCMC sampling results/: probabilities_Crary_w_iceshelf_narrowed_[ 4.0e+02  5.0e+02  7.0e-02  1.5e-01 -2.5e+01]_varH_Temp_a_G__tgrounding_Crary_inversion_256_walkers_2_iterations.csv  samples_Crary_w_iceshelf_narrowed_[ 4.0e+02  5.0e+02  7.0e-02  1.5e-01 -2.5e+01]_varH_Temp_a_G__tgrounding_Crary_inversion_256_walkers_2_iterations.csv  synthetic_probabilities_fixed_Temp_a_G__tgrounding_wiceshelf_inversion_100_walkers_500_iterations_[ 5.e+02  4.e-02  5.e-01 -4.e+01]_1000_500.csv  synthetic_probabilities_fixed_Temp_a_G__tgrounding_wiceshelf_inversion_256_walkers_500_iterations_[ 5.e+02  4.e-02  5.e-01 -4.e+01]_1000_500.csv
RACMO smb model 1979-2014/: RACMO2.3_ANT27_Grid.txt  RACMO2.3p1_ANT27_Height_lat_lon.nc
src/borehole_temperature_models/: Constants.py  InversionMCMCSimulation.py  ModelMeasured.py  TemperatureModel.py  Utilities.py  __init__.py
src/icetemp/: InversionMCMCSimulation.py  ModelMeasured.py  TemperatureModel.py
src/tests/: test_ModelMeasured.py  test_TemperatureModel.py  test_models.py
src/tests/data/ModelMeasured/: README.md  measured12362  measured1565  measured17900  measured20687  measured27999  measured29756  measured40540  measured51434  measured53424  measured68239  measured69800  measured71603  measured75338  measured7556  measured82168  measured84952  measured86295
src/tests/data/TemperatureModel/: README.md
