# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icetemp"
description = "Code to solve the one-dimensional englacial temperature evolution model (both inversion and forward sensitivity simulations) presented in the article Geothermal heat flux is the dominant source of uncertainty in englacial-temperature-based dating of ice-rise formation by Montelli and Kingslake in The Cryosphere."

license = { text = "MIT License" }

authors = [
    { name = "Sasha Montelli", email = "sashamontelli@gmail.com" },
]

keywords = [
    "Borehole thermometry",
    "Englacial temperatures",
    "Glaciology" ,
    "Ice rises",
    "Ice sheets",
    "Ice dynamics",
    "Temperature inversion",
    "Thermal modelling",
]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "emcee ~= 3.1",
    "geopandas ~= 0.13",
    "ipympl ~= 0.9",
    "jupyter ~= 1.0",
    "matplotlib ~= 3.7",
    "numpy ~= 1.24",
    "scipy ~= 1.10",
    "tqdm ~= 4.65",
    "xarray ~= 2023.5",
]

dynamic = [
    "version",
]

[project.optional-dependencies]
# Dependnecies required to develop the library
dev = [
    "pyfakefs ~= 5.2",
    "pytest ~= 7.4",
    "pytest-benchmark ~= 3.4",
    "pytest-cov ~= 4.1",
]

# Dependencies required to package the library
package = [
    "build ~= 0.10",
    "twine ~= 4.0",
    "typer ~= 0.6",
]

[project.urls]
Homepage = "https://github.com/sashamontelli/borehole_temperature_models"
Documentation = "https://github.com/sashamontelli/borehole_temperature_models"
Repository = "https://github.com/sashamontelli/borehole_temperature_models"

[tool.setuptools.dynamic]
version = { attr = "icetemp.__version__" }
